2007-04-26 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: postfixed slashes to host names, prefixed `:?'
	to parenthesis which are not referred.

2007-04-26 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: made regexps stricter, sorted out goo
	search engines, and added support for goo OEM search, such as
	So-net's. Thanks to Akinori MUSHA <knu at idaemons.org>

2007-04-22 TADA Tadashi <sho@spc.gr.jp>
	* category.rb: support mobile mode.

2007-04-19 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: cleaned up and added some URLs
	Thanks to Akinori MUSHA <knu at idaemons.org>

2007-04-03 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_comment3.rb: sorry, re-tabify.

2007-04-12 zunda <zunda at freeshell.org>
	* ja/disp_referer.rb: modified for more of mobile.goo.ne.jp search engines.

2007-04-03 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_comment3.rb,recent_trackback3.rb: replace soft tab to hard tab.
	
2007-03-28 TADA Tadashi <sho@spc.gr.jp>
	* hide-mail-field.rb: set empty string into mail field by JavaScript.

2007-03-26 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: fix error when no price, no label on isbn_detail

2007-03-23 MIYASAKA Masaru <alkaid at coral.ocn.ne.jp>
	* category.rb: class CGI -> Category::CGI.

2007-03-11 MIYASAKA Masaru <alkaid at coral.ocn.ne.jp>
	* squeeze.rb: close each data transactions before convert.

2007-03-06  Kazuhiko  <kazuhiko@fdiary.net>
	* number_anchor.rb: fix a warning message.

2007-03-06 TADA Tadashi <sho@spc.gr.jp>
	* edit_today.rb: fix warning message was shown on Firefox.

2007-02-27 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: add span elements into isbn_detail.

2007-02-09 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: delete xhtml prefix from attributes of mobile link discovery.
	* amazon.rb: add new plugin 'isbn_detail'.

2007-02-23 MIYASAKA Masaru <alkaid at coral.ocn.ne.jp> 
	* category.rb: @index -> @conf.index in Info class.

2007-02-23 TADA Tadashi <sho@spc.gr.jp>