@@ -1,3 +1,6 @@
+2007-04-29 TADA Tadashi <sho@spc.gr.jp>
+	* category.rb: support mobile mode more.
+
 2007-04-26 zunda <zunda at freeshell.org>
 	* ja/disp_referrer.rb: postfixed slashes to host names, prefixed `:?'
 	to parenthesis which are not referred.
